--- a/tests.ipynb
+++ b/tests.ipynb
@@ -9,26 +9,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pygame 2.1.2 (SDL 2.0.18, Python 3.9.7)\n",
+      "pygame 2.1.2 (SDL 2.0.18, Python 3.10.6)\n",
       "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "# import pygame\n",
-    "from HelperClasses import Board\n",
-    "from SnakeGameClass import Point, SnakeGame, Direction\n",
-    "from collections import deque"
+    "from HelperClasses import Direction, Point, Board, Snake\n",
+    "from SnakeGameClass import SnakeGame"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Point(x=5, y=5), Point(x=4, y=5), Point(x=3, y=5)]\n"
+     ]
+    }
+   ],
    "source": [
-    "game = SnakeGame()\n"
+    "game = SnakeGame()\n",
+    "snake = Snake((10,10))\n",
+    "print(snake.body)\n"
    ]
   },
   {
@@ -37,161 +45,150 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[Point(x=320.0, y=240.0), Point(x=300.0, y=240.0), Point(x=280.0, y=240.0)]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Point(x=5, y=5), Point(x=4, y=5), Point(x=3, y=5)]\n"
+     ]
     }
    ],
    "source": [
-    "# game.step()\n",
-    "game.snake"
+    "# snake.move(Direction.RIGHT)\n",
+    "# snake.move(Direction.RIGHT)\n",
+    "print(snake.body)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Point(x=5, y=4), Point(x=5, y=5), Point(x=4, y=5)]\n",
+      "[Point(x=6, y=4), Point(x=5, y=4), Point(x=5, y=5)]\n",
+      "[Point(x=6, y=5), Point(x=6, y=4), Point(x=5, y=4)]\n",
+      "[Point(x=5, y=5), Point(x=6, y=5), Point(x=6, y=4)]\n"
+     ]
+    }
+   ],
    "source": [
-    "snake = [Point(i,10) for i in range(0, 20)]\n",
-    "board = Board(20, 20, 1, snake=snake)"
+    "snake.move(Direction.UP)\n",
+    "print(snake.body)\n",
+    "snake.move(Direction.RIGHT)\n",
+    "print(snake.body)\n",
+    "snake.move(Direction.DOWN)\n",
+    "print(snake.body)\n",
+    "snake.move(Direction.LEFT)\n",
+    "print(snake.body)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Point(x=5, y=4), Point(x=5, y=5), Point(x=6, y=5)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# print(board)\n",
-    "# snake"
+    "snake.move(Direction.UP)\n",
+    "print(snake.body)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Q=deque([Point(x=0, y=9)])\n",
-      "visited=set()\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "board.get_available_space()"
+    "board = Board(10,10,1,game.snake.body)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{<Direction.UP: 3>: 97, <Direction.RIGHT: 1>: 97, <Direction.LEFT: 2>: 0}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# board.snake\n",
-    "# snake"
+    "board.get_available_space_3directions(Direction.UP)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{<Direction.RIGHT: 1>: 4, <Direction.DOWN: 4>: 4, <Direction.UP: 3>: 2}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Q = deque()\n",
-    "# Q.append((3,4))\n",
-    "if Q:\n",
-    "    print(\"True\")"
+    "food = Point(x=5, y = 2)\n",
+    "board.manhattan_distance_3directions(Direction.RIGHT, food)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "board_test = Board(640, 480, 20, snake=game.snake)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Point(x=16.0, y=12.0), Point(x=15.0, y=12.0), Point(x=14.0, y=12.0)]"
+       "   0  1  2  3  4  5  6  7  8  9\n",
+       "0  0  0  0  0  0  0  0  0  0  0\n",
+       "1  0  0  0  0  0  0  0  0  0  0\n",
+       "2  0  0  0  0  0  0  0  0  0  0\n",
+       "3  0  0  0  0  0  0  0  0  0  0\n",
+       "4  0  0  0  0  0  0  0  0  0  0\n",
+       "5  0  0  0  1  1  1  0  0  0  0\n",
+       "6  0  0  0  0  0  0  0  0  0  0\n",
+       "7  0  0  0  0  0  0  0  0  0  0\n",
+       "8  0  0  0  0  0  0  0  0  0  0\n",
+       "9  0  0  0  0  0  0  0  0  0  0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# board_test.board[10:20,10:20]\n",
-    "# board_test.snake\n",
-    "# board_test.tsnake\n",
-    "board_test.snake"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Q=deque([Point(x=16.0, y=11.0)])\n",
-      "visited=set()\n",
-      "Q=deque([Point(x=16.0, y=13.0)])\n",
-      "visited=set()\n",
-      "Q=deque([Point(x=15.0, y=12.0)])\n",
-      "visited=set()\n",
-      "Initial point not valid\n",
-      "Q=deque([Point(x=17.0, y=12.0)])\n",
-      "visited=set()\n"
-     ]
     },
     {
-     "data": {
-      "text/plain": [
-       "{'UP': 765, 'DOWN': 765, 'LEFT': 0, 'RIGHT': 765}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
-    "board_test.get_available_space()\n",
-    "# board_test.snake\n",
-    "# board_test.twidth\n",
-    "# board_test\n",
-    "\n",
-    "# next(iter(Direction)).name"
+    "board"
    ]
   }
  ],
@@ -211,12 +208,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "81794d4967e6c3204c66dcd87b604927b115b27c00565d3d43f05ba2f3a2cb0d"
+    "hash": "8203f0e0483fa59486bdc2d9f81d4312248cbb7c7b7650fcc48de869a98be164"
    }
   }
  },
