--- a/tests.ipynb
+++ b/tests.ipynb
@@ -9,13 +9,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pygame 2.1.2 (SDL 2.0.18, Python 3.10.6)\n",
+      "pygame 2.1.2 (SDL 2.0.18, Python 3.9.7)\n",
       "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
+    "import torch\n",
     "from HelperClasses import Direction, Point, Board, Snake\n",
     "from SnakeGameClass import SnakeGame"
    ]
@@ -24,138 +25,17 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Point(x=5, y=5), Point(x=4, y=5), Point(x=3, y=5)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "game = SnakeGame()\n",
+    "game = SnakeGame(10,10)\n",
+    "# game.snake\n",
     "snake = Snake((10,10))\n",
-    "print(snake.body)\n"
+    "# print(snake.body)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Point(x=5, y=5), Point(x=4, y=5), Point(x=3, y=5)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# snake.move(Direction.RIGHT)\n",
-    "# snake.move(Direction.RIGHT)\n",
-    "print(snake.body)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Point(x=5, y=4), Point(x=5, y=5), Point(x=4, y=5)]\n",
-      "[Point(x=6, y=4), Point(x=5, y=4), Point(x=5, y=5)]\n",
-      "[Point(x=6, y=5), Point(x=6, y=4), Point(x=5, y=4)]\n",
-      "[Point(x=5, y=5), Point(x=6, y=5), Point(x=6, y=4)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "snake.move(Direction.UP)\n",
-    "print(snake.body)\n",
-    "snake.move(Direction.RIGHT)\n",
-    "print(snake.body)\n",
-    "snake.move(Direction.DOWN)\n",
-    "print(snake.body)\n",
-    "snake.move(Direction.LEFT)\n",
-    "print(snake.body)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Point(x=5, y=4), Point(x=5, y=5), Point(x=6, y=5)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "snake.move(Direction.UP)\n",
-    "print(snake.body)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "board = Board(10,10,1,game.snake.body)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{<Direction.UP: 3>: 97, <Direction.RIGHT: 1>: 97, <Direction.LEFT: 2>: 0}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "board.get_available_space_3directions(Direction.UP)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{<Direction.RIGHT: 1>: 4, <Direction.DOWN: 4>: 4, <Direction.UP: 3>: 2}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "food = Point(x=5, y = 2)\n",
-    "board.manhattan_distance_3directions(Direction.RIGHT, food)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +45,7 @@
        "0  0  0  0  0  0  0  0  0  0  0\n",
        "1  0  0  0  0  0  0  0  0  0  0\n",
        "2  0  0  0  0  0  0  0  0  0  0\n",
-       "3  0  0  0  0  0  0  0  0  0  0\n",
+       "3  0  0  0  2  0  0  0  0  0  0\n",
        "4  0  0  0  0  0  0  0  0  0  0\n",
        "5  0  0  0  1  1  1  0  0  0  0\n",
        "6  0  0  0  0  0  0  0  0  0  0\n",
@@ -174,7 +54,38 @@
        "9  0  0  0  0  0  0  0  0  0  0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "board = Board(10,10,1,snake=snake.body, food=game.food)\n",
+    "board.food\n",
+    "board"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# board.get_available_space_3directions(Direction.UP)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 10, 10])"
+      ]
+     },
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -188,8 +99,120 @@
     }
    ],
    "source": [
-    "board"
+    "tens = board.to_tensor()\n",
+    "tens.shape\n",
+    "# tens = torch.unsqueeze(tens, 0)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channels = 3\n",
+    "width = 10\n",
+    "height = 10\n",
+    "net = torch.nn.Sequential(\n",
+    "    torch.nn.Conv2d(channels, 32, (3,3)),\n",
+    "    torch.nn.ReLU(),\n",
+    "    torch.nn.MaxPool2d((2, 2)),\n",
+    "    torch.nn.Conv2d(32, 32, (3,3)),\n",
+    "    torch.nn.ReLU(),\n",
+    "    torch.nn.Flatten(),\n",
+    "    torch.nn.Linear(32*4,3),\n",
+    ")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.0288,  0.0724,  0.1022]], grad_fn=<AddmmBackward0>)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = net(tens)\n",
+    "\n",
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "         [1, 1, 1, 0, 1, 1, 1, 1, 1, 1],\n",
+       "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "         [1, 1, 1, 0, 0, 0, 1, 1, 1, 1],\n",
+       "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]],\n",
+       "\n",
+       "        [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 1, 1, 1, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]],\n",
+       "\n",
+       "        [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 1, 0, 0, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]]])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
@@ -208,12 +231,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8203f0e0483fa59486bdc2d9f81d4312248cbb7c7b7650fcc48de869a98be164"
+    "hash": "81794d4967e6c3204c66dcd87b604927b115b27c00565d3d43f05ba2f3a2cb0d"
    }
   }
  },
