--- a/tests.ipynb
+++ b/tests.ipynb
@@ -6,24 +6,28 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.1.2 (SDL 2.0.18, Python 3.9.7)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     "ename": "OSError",
+     "evalue": "[WinError 1455] The paging file is too small for this operation to complete. Error loading \"c:\\Users\\otto\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torch\\lib\\cusolver64_11.dll\" or one of its dependencies.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mHelper\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mHelperClasses\u001b[39;00m \u001b[39mimport\u001b[39;00m Direction, Point, Board, Snake\n\u001b[0;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mSnakeGameClass\u001b[39;00m \u001b[39mimport\u001b[39;00m SnakeGame\n",
+      "File \u001b[1;32mc:\\Users\\otto\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torch\\__init__.py:128\u001b[0m\n\u001b[0;32m    126\u001b[0m     err \u001b[39m=\u001b[39m ctypes\u001b[39m.\u001b[39mWinError(last_error)\n\u001b[0;32m    127\u001b[0m     err\u001b[39m.\u001b[39mstrerror \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m Error loading \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mdll\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m or one of its dependencies.\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m--> 128\u001b[0m     \u001b[39mraise\u001b[39;00m err\n\u001b[0;32m    129\u001b[0m \u001b[39melif\u001b[39;00m res \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    130\u001b[0m     is_loaded \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n",
+      "\u001b[1;31mOSError\u001b[0m: [WinError 1455] The paging file is too small for this operation to complete. Error loading \"c:\\Users\\otto\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torch\\lib\\cusolver64_11.dll\" or one of its dependencies."
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "import torch\n",
-    "from HelperClasses import Direction, Point, Board, Snake\n",
+    "from Helper.HelperClasses import Direction, Point, Board, Snake\n",
     "from SnakeGameClass import SnakeGame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -44,8 +48,8 @@
        "   0  1  2  3  4  5  6  7  8  9\n",
        "0  0  0  0  0  0  0  0  0  0  0\n",
        "1  0  0  0  0  0  0  0  0  0  0\n",
-       "2  0  0  0  0  0  0  0  0  0  0\n",
-       "3  0  0  0  2  0  0  0  0  0  0\n",
+       "2  0  0  0  0  0  0  0  2  0  0\n",
+       "3  0  0  0  0  0  0  0  0  0  0\n",
        "4  0  0  0  0  0  0  0  0  0  0\n",
        "5  0  0  0  1  1  1  0  0  0  0\n",
        "6  0  0  0  0  0  0  0  0  0  0\n",
@@ -54,7 +58,7 @@
        "9  0  0  0  0  0  0  0  0  0  0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,16 +80,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([3, 10, 10])"
+       "torch.Size([1, 3, 10, 10])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tens = board.to_tensor()\n",
+    "tens = torch.unsqueeze(tens, 0)\n",
+    "tens.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   0  1  2  3  4  5  6  7  8  9\n",
+       "0  0  0  0  0  0  0  0  0  0  0\n",
+       "1  0  0  0  0  0  0  0  0  0  0\n",
+       "2  0  0  0  0  0  0  0  2  0  0\n",
+       "3  0  0  0  0  0  0  0  0  0  0\n",
+       "4  0  0  0  0  0  0  0  0  0  0\n",
+       "5  0  0  0  0  1  1  1  0  0  0\n",
+       "6  0  0  0  0  0  0  0  0  0  0\n",
+       "7  0  0  0  0  0  0  0  0  0  0\n",
+       "8  0  0  0  0  0  0  0  0  0  0\n",
+       "9  0  0  0  0  0  0  0  0  0  0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s2 = Snake((10,10))\n",
+    "s2.move(Direction.RIGHT, game.food)\n",
+    "b2 = Board(10,10,1,snake=s2.body, food=game.food)\n",
+    "b2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([10, 10])\n",
+      "torch.Size([10, 10])\n"
+     ]
+    }
+   ],
+   "source": [
+    "b_t = board.to_tensor(channels=1)\n",
+    "b2_t = b2.to_tensor(channels=1)\n",
+    "print(b_t.shape)\n",
+    "print(b2_t.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 2, 10, 10])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stacked = torch.stack((b_t,b2_t)).unsqueeze(0)\n",
+    "stacked.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channels = 2\n",
+    "net = torch.nn.Sequential(\n",
+    "    torch.nn.Conv2d(channels, 16, (5,5)),\n",
+    "    torch.nn.ReLU(),\n",
+    "    torch.nn.Conv2d(16, 16, (5,5)),\n",
+    "    torch.nn.ReLU(),\n",
+    "    torch.nn.Flatten(),\n",
+    "    torch.nn.Linear(16*2*2,3), # For 10x10 grid\n",
+    "    # torch.nn.Linear(16*3*3,3), # For 20x20 grid\n",
+    ")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 3])"
+      ]
+     },
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -99,120 +219,70 @@
     }
    ],
    "source": [
-    "tens = board.to_tensor()\n",
-    "tens.shape\n",
-    "# tens = torch.unsqueeze(tens, 0)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "channels = 3\n",
-    "width = 10\n",
-    "height = 10\n",
-    "net = torch.nn.Sequential(\n",
-    "    torch.nn.Conv2d(channels, 32, (3,3)),\n",
-    "    torch.nn.ReLU(),\n",
-    "    torch.nn.MaxPool2d((2, 2)),\n",
-    "    torch.nn.Conv2d(32, 32, (3,3)),\n",
-    "    torch.nn.ReLU(),\n",
-    "    torch.nn.Flatten(),\n",
-    "    torch.nn.Linear(32*4,3),\n",
-    ")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[-0.0288,  0.0724,  0.1022]], grad_fn=<AddmmBackward0>)"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "out = net(tens)\n",
+    "# out = net(tens)\n",
+    "out = net(stacked)\n",
     "\n",
-    "out"
+    "out.shape\n",
+    "# out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 10 is out of bounds for dimension 0 with size 10",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m b_t[\u001b[39m10\u001b[39;49m]\n\u001b[0;32m      2\u001b[0m b2_t[\u001b[39m10\u001b[39m]\n\u001b[0;32m      4\u001b[0m stacked[\u001b[39m0\u001b[39m][\u001b[39m10\u001b[39m]\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 10 is out of bounds for dimension 0 with size 10"
+     ]
+    }
+   ],
+   "source": [
+    "b_t[10]\n",
+    "b2_t[10]\n",
+    "\n",
+    "stacked[0][10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 0, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 0, 0, 0, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]],\n",
-       "\n",
-       "        [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "         [0, 0, 0, 1, 1, 1, 0, 0, 0, 0],\n",
-       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]],\n",
-       "\n",
-       "        [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "         [0, 0, 0, 1, 0, 0, 0, 0, 0, 0],\n",
-       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]]])"
+       "tensor([[-0.0955, -0.2803, -0.0384],\n",
+       "        [-0.0955, -0.2803, -0.0384]], grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "temp = torch.stack((stacked[0],stacked[0]))\n",
+    "\n",
+    "temp.shape\n",
+    "\n",
+    "\n",
+    "net(temp)"
+   ]
   }
  ],
  "metadata": {
@@ -231,12 +301,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "81794d4967e6c3204c66dcd87b604927b115b27c00565d3d43f05ba2f3a2cb0d"
+    "hash": "b28fa9c21d578ac68763e359e809f0d45ea107a0cd9fd4c3da0bc1f5503f5b7c"
    }
   }
  },
