--- a/tests.ipynb
+++ b/tests.ipynb
@@ -6,18 +6,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\otto\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pygame 2.1.2 (SDL 2.0.18, Python 3.9.13)\n",
+      "pygame 2.1.2 (SDL 2.0.18, Python 3.9.7)\n",
       "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
      ]
     }
@@ -33,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,26 +47,18 @@
        "0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
        "1  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
        "2  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       "3  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0\n",
+       "3  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
        "4  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
        "5  0.0  0.0  0.0  0.5  0.5  0.5  0.0  0.0  0.0  0.0\n",
        "6  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
        "7  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       "8  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "8  0.0  0.0  0.0  0.0  0.0  1.0  0.0  0.0  0.0  0.0\n",
        "9  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
     }
    ],
    "source": [
@@ -116,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -124,18 +108,18 @@
       "text/plain": [
        "     0    1    2    3    4    5    6    7    8    9\n",
        "0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       "1  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0  0.0\n",
+       "1  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
        "2  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
        "3  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
        "4  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
        "5  0.0  0.0  0.0  0.0  0.5  0.5  0.5  0.0  0.0  0.0\n",
        "6  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
        "7  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       "8  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "8  0.0  0.0  0.0  0.0  0.0  1.0  0.0  0.0  0.0  0.0\n",
        "9  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,13 +127,13 @@
    "source": [
     "s2 = Snake((10,10))\n",
     "s2.move(Direction.RIGHT, game.food)\n",
-    "b2 = Board(10,10,1,snake=s2.body, food=game.food)\n",
+    "b2 = Board(10,10,snake=s2, food=game.food)\n",
     "b2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -175,47 +159,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 2, 10, 10])"
+       "torch.Size([1, 4, 10, 10])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stacked = torch.stack((b_t,b2_t)).unsqueeze(0)\n",
+    "stacked = torch.stack((b_t,b2_t,b2_t,b2_t)).unsqueeze(0)\n",
     "stacked.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "channels = 2\n",
     "net = torch.nn.Sequential(\n",
-    "    torch.nn.Conv2d(channels, 16, (5,5)),\n",
+    "    torch.nn.Conv2d(4, 32, (3,3)),\n",
     "    torch.nn.ReLU(),\n",
-    "    torch.nn.Conv2d(16, 16, (5,5)),\n",
+    "    torch.nn.MaxPool2d((2, 2)),\n",
+    "    torch.nn.Conv2d(32, 64, (2,2)),\n",
     "    torch.nn.ReLU(),\n",
     "    torch.nn.Flatten(),\n",
-    "    torch.nn.Linear(16*2*2,3), # For 10x10 grid\n",
+    "    torch.nn.Linear(64*3*3,64*2*2), # for 10x10 grid\n",
+    "    torch.nn.ReLU(),\n",
+    "    torch.nn.Linear(64*2*2,4), # for 10x10 grid\n",
     "    # torch.nn.Linear(16*3*3,3), # For 20x20 grid\n",
     ")\n",
     "\n",
     "tf_model = tf.keras.Sequential([\n",
-    "    tf.keras.layers.Conv2D(16, 5, activation=\"relu\"),\n",
     "    tf.keras.layers.Conv2D(32, 3, activation=\"relu\"),\n",
+    "    tf.keras.layers.MaxPool2D(pool_size=(2,2)),\n",
+    "    tf.keras.layers.Conv2D(64, 2, activation=\"relu\"),\n",
     "    tf.keras.layers.Flatten(),\n",
-    "    tf.keras.layers.Dense(32*4, activation=\"relu\"),\n",
+    "    tf.keras.layers.Dense(64*2*2, activation=\"relu\"),\n",
     "    tf.keras.layers.Dense(4, activation=\"linear\")\n",
     "    \n",
     "])\n",
@@ -225,25 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 10, 10, 4)\n"
+      "torch.Size([1, 4])\n",
+      "(1, 4)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "TensorShape([1, 4])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "ename": "",
@@ -256,18 +235,19 @@
    ],
    "source": [
     "# out = net(tens)\n",
-    "# out = net(stacked)\n",
+    "out = net(stacked)\n",
+    "print(out.shape)\n",
     "# tf_model.layers[0](b_tf_stacked)\n",
     "# out.shape\n",
-    "print(b_tf_stacked.shape)\n",
+    "# print(b_tf_stacked.shape)\n",
     "out = tf_model(b_tf_stacked)\n",
-    "out.shape\n",
+    "print(out.shape)\n",
     "# tf.argmax(out[0]).numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -308,12 +288,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b28fa9c21d578ac68763e359e809f0d45ea107a0cd9fd4c3da0bc1f5503f5b7c"
+    "hash": "81794d4967e6c3204c66dcd87b604927b115b27c00565d3d43f05ba2f3a2cb0d"
    }
   }
  },
