--- a/tests_4directions.ipynb
+++ b/tests_4directions.ipynb
@@ -2419,7 +2419,7 @@
     }
    ],
    "source": [
-    "train()"
+    "# train()"
    ]
   },
   {
@@ -2458,12 +2458,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b28fa9c21d578ac68763e359e809f0d45ea107a0cd9fd4c3da0bc1f5503f5b7c"
+    "hash": "81794d4967e6c3204c66dcd87b604927b115b27c00565d3d43f05ba2f3a2cb0d"
    }
   }
  },
