making final changes

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -25,11 +25,9 @@
    "source": [
     "import numpy as np\n",
     "import torch\n",
-    "import tensorflow as tf\n",
     "from HelperClasses import Direction, Point, Board, Snake\n",
     "from SnakeGameClass import SnakeGame\n",
-    "from SnakeGameClass_4Directions import SnakeGame as SnakeGame_4D\n",
-    "import tensorflow as tf"
+    "from SnakeGameClass_4Directions import SnakeGame as SnakeGame_4D"
    ]
   },
   {
@@ -244,13 +242,6 @@
    ],
    "source": [
     "b_t = board.to_tensor(channels=1)\n",
-    "# b2_t = b2.to_tensor(channels=1)\n",
-    "# b_tf = board.to_tensorflow_tensor()\n",
-    "\n",
-    "# b_tf_stacked = tf.stack((b_tf,b_tf,b_tf,b_tf), axis=-1)\n",
-    "# b_tf_stacked = tf.stack((b_tf,b_tf), axis=-1)\n",
-    "# b_tf_stacked = tf.expand_dims(b_tf_stacked, axis=0)\n",
-    "print(b_t.shape)\n",
     "# print(b2_t.shape)\n",
     "b_t"
    ]
@@ -376,12 +367,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b28fa9c21d578ac68763e359e809f0d45ea107a0cd9fd4c3da0bc1f5503f5b7c"
+    "hash": "81794d4967e6c3204c66dcd87b604927b115b27c00565d3d43f05ba2f3a2cb0d"
    }
   }
  },
